--- a/src/main/webapp/day3/2.html
+++ b/src/main/webapp/day3/2.html
@@ -13,7 +13,7 @@
       }
       .heading { color:red; /* 글자색 */ }
     </style>
-<!-- 
+<!-- style 우선순위
 1. inline style ="color:purple;"
 2. id 
 3. class 
